WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273601
Tests using `UIScriptControllerIOS::sendEventStream` sometimes assert on debug builds
https://bugs.webkit.org/show_bug.cgi?id=273601
Summary
Tests using `UIScriptControllerIOS::sendEventStream` sometimes assert on debu...
Tim Nguyen (:ntim)
Reported
2024-05-01 18:43:44 PDT
rdar://124414379
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2024-05-01 18:46:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28028
EWS
Comment 2
2024-05-02 06:27:07 PDT
Committed
278254@main
(88b97cdbbb91): <
https://commits.webkit.org/278254@main
> Reviewed commits have been landed. Closing PR #28028 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug